# rest_on

./: .env  Cargo.toml  README.md
docs/: all.html  crates.js  fn.main.html  index.html  macro.get_function_string.html
docs/ai_functions/: index.html
docs/ai_functions/ai_func_architect/: fn.print_project_scope.html  fn.print_site_urls.html  index.html  sidebar-items.js
docs/ai_functions/ai_func_backend/: fn.print_backend_webserver_code.html  fn.print_fixed_code.html  fn.print_improved_webserver_code.html  fn.print_rest_api_endpoints.html  index.html
docs/ai_functions/ai_func_manager/: fn.convert_user_input_to_goal.html  index.html
docs/api_handler/: index.html
docs/api_handler/call_request/: fn.call_gpt.html  index.html
docs/auto_gpt_agent/: all.html  fn.main.html  index.html  macro.get_function_string!.html  macro.get_function_string.html  sidebar-items.js
docs/auto_gpt_agent/ai_functions/: index.html  sidebar-items.js
docs/auto_gpt_agent/api_handler/: index.html  sidebar-items.js
docs/auto_gpt_agent/helpers/: index.html
docs/auto_gpt_agent/models/: index.html  sidebar-items.js
docs/helpers/: index.html  sidebar-items.js
docs/helpers/command_lines/: enum.PrintCommand.html  fn.confirm_safe_code.html  index.html  (+1 more)
docs/models/: index.html
schemas/: api_schema.json
source/: web_server_code_template.rs
source/schemas/: api_schema.json
src/: lib.rs  main.rs  main2.rs
src/ai_functions/: ai_func_architect.rs  ai_func_backend.rs  ai_func_manager.rs  mod.rs
src/api_handler/: call_request.rs
src/helpers/: command_lines.rs  general.rs  mod.rs
(+120 files in other folders)
