[package]
name = "auto_gpt_agent"
version = "0.1.0"
edition = "2021"
authors = ["Anatolii Maltsev <https://www.linkedin.com/in/anatolii-maltsev/>"]

default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.10", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["full"] }
crossterm = "0.28.1"
async-trait = "0.1.83"
webbrowser = "1.0.3"
strum = "0.26.3"
strum_macros = "0.26.4"
ai_functions = "0.1.1"
